--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   </head>
   <body>
     <h1>Hello World..!!</h1>
-    <footer>Coded by Mbokeleng Tsotetsi</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/betty-byte" target="_blank"
+        >Mbokeleng Tsotetsi</a
+      >
+      code hosted on
+
+      <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
+        >Github</a
+      >
+      and website hosted on
+      <a href="https://shecodes-seven.netlify.app" target="_blank">Netlify</a>
+    </footer>
   </body>
 </html>
