--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <footer>
       Coded by
       <a href="https://github.com/betty-byte" target="_blank"
-        >Mbokeleng Tsotetsi</a
+        >Mbokeleng Tsotetsi,</a
       >
-      code hosted on
+      is open-sourced on
 
       <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
         >Github</a
       >
-      and website hosted on
+      and hosted on
       <a href="https://shecodes-seven.netlify.app" target="_blank">Netlify</a>
     </footer>
   </body>
