Added HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World..!!</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <div>
+      <h1>Free State</h1>
+      <p>Tuesday 13:59, scattered clouds <br />Humidity:66%, Wind:3.13km/h</p>
+    </div>
+    <div>🫀 20°C</div>
     <footer>
       Coded by
       <a href="https://github.com/betty-byte" target="_blank"
