--- a/index.html
+++ b/index.html
@@ -5,30 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <div>
-      <h1>Free State</h1>
-      <p>Tuesday 13:59, scattered clouds <br />Humidity:66%, Wind:3.13km/h</p>
-    </div>
-    <div>🫀 20°C</div>
-    <footer>
-      Coded by
-      <a href="https://github.com/betty-byte" target="_blank"
-        >Mbokeleng Tsotetsi,</a
-      >
-      is open-sourced on
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet"
+  />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-      <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
-        >Github</a
-      >
-      and hosted on
-      <a href="https://shecodes-seven.netlify.app" target="_blank">Netlify</a>
-    </footer>
+  <link rel="stylesheet" href="src/style.css" />
+  <body>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <div>
+        <h1>Free State</h1>
+        <p>Tuesday 13:59, scattered clouds <br />Humidity:66%, Wind:3.13km/h</p>
+      </div>
+      <div>🫀 20°C</div>
+      <footer>
+        Coded by
+        <a href="https://github.com/betty-byte" target="_blank"
+          >Mbokeleng Tsotetsi,</a
+        >
+        is open-sourced on
+
+        <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
+          >Github</a
+        >
+        and hosted on
+        <a href="https://shecodes-seven.netlify.app" target="_blank">Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
