--- a/index.html
+++ b/index.html
@@ -16,16 +16,30 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city" required />
-          <input type="submit" value="Search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city"
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
-      <div>
-        <h1>Free State</h1>
-        <p>Tuesday 13:59, scattered clouds <br />Humidity:66%, Wind:3.13km/h</p>
+      <div class="weather-app-data">
+        <div>
+          <h1 class="weather-app-city">Welkom</h1>
+          <p class="weather-app-details">
+            Tuesday 13:59, scattered clouds <br />Humidity:
+            <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+          </p>
+        </div>
+        <div class="weather-app-data">
+          <div class="weather-app-icon">🫀</div>
+          <div class="weather-temperature">20</div>
+          <div class="weathe-app-unit">°C</div>
+        </div>
       </div>
-      <div>🫀 20°C</div>
       <footer>
         Coded by
         <a href="https://github.com/betty-byte" target="_blank"
