--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city"
             required
             class="search-form-input"
+            id="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <div class="weather-app-data">
         <div>
-          <h1 class="weather-app-city">Welkom</h1>
+          <h1 class="weather-app-city" id="weather-app-city">Welkom</h1>
           <p class="weather-app-details">
             Tuesday 13:59, scattered clouds <br />Humidity:
             <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
@@ -54,5 +55,6 @@
         <a href="https://shecodes-seven.netlify.app" target="_blank">Netlify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
