--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <link rel="stylesheet" href="src/style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
   <body>
     <div class="weather-app">
       <header>
@@ -43,9 +44,7 @@
       </div>
       <footer>
         Coded by
-        <a href="https://github.com/betty-byte" target="_blank"
-          >Mbokeleng Tsotetsi,</a
-        >
+        <a href="https://github.com/betty-byte" target="_blank">Betty,</a>
         is open-sourced on
 
         <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
