--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="weather-app-data">
           <div class="weather-app-icon">🫀</div>
-          <div class="weather-temperature">20</div>
+          <div class="weather-temperature" id="weather-temperature">20</div>
           <div class="weathe-app-unit">°C</div>
         </div>
       </div>
