--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </header>
       <div class="weather-app-data">
         <div>
-          <h1 class="weather-app-city" id="weather-app-city">Welkom</h1>
+          <h1 class="weather-app-city" id="weather-app-city"></h1>
           <p class="weather-app-details">
             Tuesday 13:59, scattered clouds <br />Humidity:
             <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
@@ -38,7 +38,7 @@
         </div>
         <div class="weather-app-data">
           <div class="weather-app-icon">🫀</div>
-          <div class="weather-temperature" id="weather-temperature">20</div>
+          <div class="weather-temperature" id="weather-temperature"></div>
           <div class="weathe-app-unit">°C</div>
         </div>
       </div>
