--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <div>
           <h1 class="weather-app-city" id="weather-app-city"></h1>
           <p class="weather-app-details">
-            Tuesday 13:59, scattered clouds <br />Humidity:
-            <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+            <span id="time"></span>, <span id="scatered"> </span><br />
+            Humidity: <strong id="humidity"></strong>, Wind:
+            <strong id="wind"></strong>
           </p>
         </div>
         <div class="weather-app-data">
