Added more details on the icon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
           </p>
         </div>
         <div class="weather-app-data">
-          <div class="weather-app-icon">🫀</div>
+          <div>
+            <div class="icon"></div>
+          </div>
           <div class="weather-temperature" id="weather-temperature"></div>
           <div class="weathe-app-unit">°C</div>
         </div>
@@ -46,7 +48,7 @@
       <footer>
         Coded by
         <a href="https://github.com/betty-byte" target="_blank">Betty,</a>
-        is open-sourced on
+        open-sourced on
 
         <a href="https://github.com/betty-byte/SeventhHomework" target="_blank"
           >Github</a
