Added more HTML and CSS elements

--- a/index.html
+++ b/index.html
@@ -28,23 +28,71 @@
           <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
-      <div class="weather-app-data">
-        <div>
-          <h1 class="weather-app-city" id="weather-app-city"></h1>
-          <p class="weather-app-details">
-            <span id="time"></span>, <span id="scatered"> </span><br />
-            Humidity: <strong id="humidity"></strong>, Wind:
-            <strong id="wind"></strong>
-          </p>
-        </div>
+      <main>
         <div class="weather-app-data">
           <div>
-            <div class="icon"></div>
+            <h1 class="weather-app-city" id="weather-app-city"></h1>
+            <p class="weather-app-details">
+              <span id="time"></span>, <span id="scatered"> </span><br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
+            </p>
           </div>
-          <div class="weather-temperature" id="weather-temperature"></div>
-          <div class="weathe-app-unit">°C</div>
+          <div class="weather-app-data">
+            <div>
+              <div class="icon"></div>
+            </div>
+            <div class="weather-temperature" id="weather-temperature"></div>
+            <div class="weathe-app-unit">°C</div>
+          </div>
         </div>
-      </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Tue</div>
+            <div class="weather-forecast-icon">🐭</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
+              <div class="weather-forecast-temp-two">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Wed</div>
+            <div class="weather-forecast-icon">🐭</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
+              <div class="weather-forecast-temp-two">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Thu</div>
+            <div class="weather-forecast-icon">🐭</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
+              <div class="weather-forecast-temp-two">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Fri</div>
+            <div class="weather-forecast-icon">🐭</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
+              <div class="weather-forecast-temp-two">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">🐭</div>
+            <div class="weather-forecast-temps">
+              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
+              <div class="weather-forecast-temp-two">9°</div>
+            </div>
+          </div>
+        </div>
+      </main>
       <footer>
         Coded by
         <a href="https://github.com/betty-byte" target="_blank">Betty,</a>
