--- a/index.html
+++ b/index.html
@@ -46,49 +46,27 @@
             <div class="weathe-app-unit">°C</div>
           </div>
         </div>
+
         <div class="weather-forecast">
           <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Tue</div>
-            <div class="weather-forecast-icon">🐭</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
-              <div class="weather-forecast-temp-two">9°</div>
+            <div class="weather-forecat-date">Tue</div>
+            <div class="weather-forecat-icon">🐻</div>
+            <div class="weather-forecat-temperatures">
+              <div class="weather-temp">
+                <strong>15°</strong>
+              </div>
+              <div class="weather-temp">9°</div>
             </div>
           </div>
 
           <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Wed</div>
-            <div class="weather-forecast-icon">🐭</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
-              <div class="weather-forecast-temp-two">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Thu</div>
-            <div class="weather-forecast-icon">🐭</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
-              <div class="weather-forecast-temp-two">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Fri</div>
-            <div class="weather-forecast-icon">🐭</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
-              <div class="weather-forecast-temp-two">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">🐭</div>
-            <div class="weather-forecast-temps">
-              <div class="weather-forecast-temp-one"><strong>15°</strong></div>
-              <div class="weather-forecast-temp-two">9°</div>
+            <div class="weather-forecat-date">Wed</div>
+            <div class="weather-forecat-icon">🐻</div>
+            <div class="weather-forecat-temperatures">
+              <div class="weather-temp">
+                <strong>15°</strong>
+              </div>
+              <div class="weather-temp">9°</div>
             </div>
           </div>
         </div>
