--- a/index.html
+++ b/index.html
@@ -47,29 +47,7 @@
           </div>
         </div>
 
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecat-date">Tue</div>
-            <div class="weather-forecat-icon">🐻</div>
-            <div class="weather-forecat-temperatures">
-              <div class="weather-temp">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-temp">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecat-date">Wed</div>
-            <div class="weather-forecat-icon">🐻</div>
-            <div class="weather-forecat-temperatures">
-              <div class="weather-temp">
-                <strong>15°</strong>
-              </div>
-              <div class="weather-temp">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         Coded by
